k8s/helm/apigwwm/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: eshop_backend_route
            virtual_hosts:
            - name: eshop_backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/m/"
                route:
                  prefix_rewrite: "/marketing-api/"
                  cluster: marketing
              - match:
                  prefix: "/marketing-api/"
                route:
                  cluster: marketing
          http_filters:
          - name: envoy.router            
  clusters:
  - name: marketing
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: marketing-api
        port_value: 80
  - name: locations
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: locations-api
        port_value: 80
